# faq-builder

./: .env.template  README.md  TODO.md  analysis.md  analyze_classifications.py  categorization_manual.md  categorization_unification_proposal.md  keith_videos_list.txt  pilot_migration_data.json  post_classifications.md  pyproject.toml  reddit_classifications.md  youtube_classifications.md
.github/: copilot-instructions.md
archive/: pilot_migration.py  pilot_migration_report.md  pilot_validation_analysis.md
blog_posts/: TEMPLATE.md  gaming_ai_ml_blog_planning.md  healthcare_ai_blog_topics_survey.md  healthcare_ai_privacy_security_ethics_planning.md  linux_2014osx.md  linux_6mo.md  template_improvement_analysis.md
blog_posts/gaming/: gaming_ai_ml_blog_planning_v2.md  gaming_for_tech.md
data/: GzXH65eiHWU.txt  bkUXcq1c0zM.txt  keith_video_ids.txt  keith_video_ids_safe.txt  keith_video_ids_unique.txt
data/chatgpt/: gaming_interview.txt
data/google_docs/: Blog_ Gaming vs tech.md
data/reddit/: trnka_mlquestions,machinelearning,gamedev,learnmachinelearning,mlops,aws,LanguageTechnology_comments_2025-09-12_152303.json  trnka_mlquestions_comments_2025-08-30_134204.json
data/youtube/: 2024-12-13_5TjHwWLhcpQ.json  2025-04-05_8_yt5sTQWg4.json  2025-06-26_35E0D4H3VNg.json  2025-07-18_eT5dcly8VMU.json  (+6 more)
design_docs/: categorization_system.md  llm_prompt_system_design.md  reddit_design.md  reddit_enhancement_design.md  reddit_pipeline.md  youtube_design.md
src/: cli.py  reddit_models.py
tests/: test_basic.py  test_cli_imports.py  test_llm_imports.py  test_reddit.py
(+190 files in other folders)
